# 1coder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cliff.toml  justfile
.github/workflows/: ci.yml  release.yml
app/: main.cpp
app/platform/: platform_sdl.cpp  platform_sdl.h
app/render/: draw.cpp  draw.h  glyph_atlas.cpp  glyph_atlas.h  render_editor.cpp  render_editor.h  render_lsp.cpp  render_lsp.h  render_metrics.h  theme.cpp  theme.h
config/: config.example.toml
core/base/: base_arena.cpp  base_arena.h  base_math.h  base_string.cpp  base_string.h  base_types.h
core/buffers/: buf_command.cpp  buf_compile.cpp  buf_compile.h  buf_explorer.cpp  buf_explorer.h  buf_git.cpp  buf_git.h  buf_image.cpp  buf_image.h  buf_picker.cpp  explorer_ops.cpp  explorer_ops.h  git_ops.cpp  git_ops.h
core/command/: command_id.cpp  command_id.h
core/config/: config.cpp  config.h  toml.cpp  toml.h
core/editor/: buffer.cpp  buffer.h  buffer_registry.cpp  buffer_registry.h  command.cpp  command.h  command_line.cpp  editor.cpp  editor.h  file_watch.cpp  file_watch.h  filetype.cpp  filetype.h  input.cpp  lsp.cpp  lsp.h  lsp_actions.cpp  lsp_actions.h  lsp_ui.cpp  lsp_ui.h  mouse.cpp  multicursor.cpp  multicursor.h  panel.cpp  panel.h  view.cpp  view.h
core/input/: keymap.cpp  keymap.h  keys.cpp  keys.h  mouse.h
core/lsp/: client.cpp  client.h  framing.cpp  framing.h  json.cpp  json.h  protocol.cpp  protocol.h  registry.cpp  registry.h  transport.cpp  transport.h
core/os/: os_file.cpp  os_file.h  os_process.cpp  os_process.h
core/search/: search.cpp  search.h
core/text/: gap_buffer.cpp  gap_buffer.h  line_index.cpp  line_index.h  syntax.cpp  syntax.h  syntax_languages.cpp  token.cpp  token.h  undo.cpp  undo.h
core/vim/: vim_binds.cpp  vim_jumplist.cpp  vim_jumplist.h  vim_motions.cpp  vim_motions.h  vim_operators.cpp  vim_operators.h  vim_search.cpp  vim_search.h  vim_state.cpp  vim_state.h
docs/: README.md  architecture.md  commands.md  config.md  development.md  explorer.md  git.md  keybindings.md  lsp.md  rendering.md  search.md
docs/superpowers/specs/: 2026-07-19-neovim-mouse-support-design.md
tests/: test.h  test_base.cpp  test_buffer.cpp  test_command_line.cpp  test_compile.cpp  test_config.cpp  test_explorer.cpp  test_file_watch.cpp  test_gap_buffer.cpp  test_git.cpp  test_keymap.cpp  test_keys.cpp  test_line_index.cpp  test_lsp_actions.cpp  test_lsp_client.cpp  test_lsp_e2e.cpp  test_lsp_editor.cpp  test_lsp_json.cpp  test_lsp_protocol.cpp  test_lsp_registry.cpp  test_lsp_ui.cpp  test_lsp_wiring.cpp  test_main.cpp  test_mouse.cpp  test_multicursor.cpp  test_os_file.cpp  test_os_process.cpp  test_panel.cpp  test_render_metrics.cpp  test_search.cpp  test_syntax.cpp  test_tempdir.h  test_undo.cpp  test_view.cpp  test_vim.cpp  test_vim_search.cpp
tools/: fake_lsp_server.cpp  test_vimdiff.py  vimdiff.py
